// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`table add value attribute emits an event 1`] = `
Array [
  Object {
    "data": Object {
      "columnId": "source/column",
      "datatype": "http://www.w3.org/2001/XMLSchema#string",
      "language": undefined,
      "parameters": Object {
        "default": undefined,
        "format": undefined,
      },
      "propertyTemplate": "http://schema.org/name",
      "tableId": "example/table",
    },
    "name": "ValueAttributeAdded",
  },
]
`;

exports[`table add value attribute return expected state 1`] = `
Object {
  "@id": StringMatching /example\\\\/table\\\\/attribute\\\\/\\.\\+/,
  "@type": Array [
    "Attribute",
    "ValueAttribute",
  ],
  "column": "source/column",
  "datatype": "http://www.w3.org/2001/XMLSchema#string",
  "language": undefined,
  "parameters": Object {
    "@context": Object {
      "@vocab": "https://rdf-cube-curation.described.at/datatype/",
    },
    "default": undefined,
    "format": undefined,
  },
  "propertyTemplate": "http://schema.org/name",
  "tableId": "example/table",
}
`;

exports[`table add value attribute with datatype parameters emits an event 1`] = `
Array [
  Object {
    "data": Object {
      "columnId": "source/column",
      "datatype": "http://www.w3.org/2001/XMLSchema#date",
      "language": undefined,
      "parameters": Object {
        "default": undefined,
        "format": "YYYY/mm/dd",
      },
      "propertyTemplate": "http://schema.org/name",
      "tableId": "example/table",
    },
    "name": "ValueAttributeAdded",
  },
]
`;

exports[`table add value attribute with datatype parameters persists the parameters 1`] = `
Object {
  "@id": StringMatching /example\\\\/table\\\\/attribute\\\\/\\.\\+/,
  "@type": Array [
    "Attribute",
    "ValueAttribute",
  ],
  "column": "source/column",
  "datatype": "http://www.w3.org/2001/XMLSchema#date",
  "language": undefined,
  "parameters": Object {
    "@context": Object {
      "@vocab": "https://rdf-cube-curation.described.at/datatype/",
    },
    "default": undefined,
    "format": "YYYY/mm/dd",
  },
  "propertyTemplate": "http://schema.org/name",
  "tableId": "example/table",
}
`;
